--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "node-sass": "^7.0.1",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "scss": "^0.2.4",
+    "style-loader": "^3.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
